# sphinxcontrib-oembed

./: README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yml  release.yml
doc/: conf.py  index.rst
sphinxcontrib/: oembed.py
tests/: test_it.py
tests/test-default/: conf.py  index.rst
